tests/tail-2/F-vs-rename.sh
@@ -1,7 +1,7 @@
 #!/bin/sh
-# demonstrate that tail -F works when renaming the tailed files
-# Before coreutils-8.3, tail -F a b would stop tracking additions to b
-# after "mv a b".
+# Demonstrate that tail -F works when renaming the tailed files.
+# Between coreutils 7.5 and 8.2 inclusive, 'tail -F a b' would
+# stop tracking additions to b after 'mv a b'.
 
 # Copyright (C) 2009-2015 Free Software Foundation, Inc.
 
@@ -21,55 +21,57 @@
 . "${srcdir=.}/tests/init.sh"; path_prepend_ ./src
 print_ver_ tail
 
-touch a b || framework_failure_
-
-debug='---disable-inotify'
-debug=
-tail $debug -F -s.1 a b > out 2>&1 & pid=$!
-
 check_tail_output()
 {
   local delay="$1"
-  grep "$tail_re" out > /dev/null ||
+  grep "$tail_re" out ||
     { sleep $delay; return 1; }
 }
 
-# Wait up to 12.7s for tail to start
-echo x > a
-tail_re='^x$' retry_delay_ check_tail_output .1 7 || fail=1
+touch a b || framework_failure_
 
-mv a b || fail=1
+for mode in '' '---disable-inotify'; do
+  tail $mode -F -s.1 a b > out 2>&1 & pid=$!
 
-# Wait 12.7s for this diagnostic:
-# tail: 'a' has become inaccessible: No such file or directory
-tail_re='inaccessible' retry_delay_ check_tail_output .1 7 || fail=1
+  # Wait up to 12.7s for tail to start.
+  echo x > a
+  tail_re='^x$' retry_delay_ check_tail_output .1 7 || fail=1
 
-echo x > a
-# Wait up to 12.7s for this to appear in the output:
-# "tail: '...' has appeared;  following end of new file"
-tail_re='has appeared' retry_delay_ check_tail_output .1 7 ||
-  { echo "$0: a: unexpected delay?"; cat out; fail=1; }
+  mv a b || fail=1
 
-echo y >> b
-# Wait up to 12.7s for "y" to appear in the output:
-tail_f_vs_rename_2() {
-  local delay="$1"
-  tr '\n' @ < out | grep '@@==> b <==@y@$' > /dev/null ||
-    { sleep $delay; return 1; }
-}
-retry_delay_ tail_f_vs_rename_2 .1 7 ||
-  { echo "$0: b: unexpected delay?"; cat out; fail=1; }
+  # Wait 12.7s for this diagnostic:
+  # tail: 'a' has become inaccessible: No such file or directory
+  tail_re='inaccessible' retry_delay_ check_tail_output .1 7 || fail=1
 
-echo z >> a
-# Wait up to 12.7s for "z" to appear in the output:
-tail_f_vs_rename_3() {
-  local delay="$1"
-  tr '\n' @ < out | grep '@@==> a <==@z@$' > /dev/null ||
-    { sleep $delay; return 1; }
-}
-retry_delay_ tail_f_vs_rename_3 .1 7 ||
-  { echo "$0: a: unexpected delay?"; cat out; fail=1; }
+  echo x > a
+  # Wait up to 12.7s for this to appear in the output:
+  # "tail: '...' has appeared;  following end of new file"
+  tail_re='has appeared' retry_delay_ check_tail_output .1 7 ||
+    { echo "$0: a: unexpected delay?"; cat out; fail=1; }
 
-kill -HUP $pid
+  echo y >> b
+  # Wait up to 12.7s for "y" to appear in the output:
+  tail_f_vs_rename_2() {
+    local delay="$1"
+    tr '\n' @ < out | grep '@@==> b <==@y@$' > /dev/null ||
+      { sleep $delay; return 1; }
+  }
+  retry_delay_ tail_f_vs_rename_2 .1 7 ||
+    { echo "$0: b: unexpected delay?"; cat out; fail=1; }
+
+  echo z >> a
+  # Wait up to 12.7s for "z" to appear in the output:
+  tail_f_vs_rename_3() {
+    local delay="$1"
+    tr '\n' @ < out | grep '@@==> a <==@z@$' > /dev/null ||
+      { sleep $delay; return 1; }
+  }
+  retry_delay_ tail_f_vs_rename_3 .1 7 ||
+    { echo "$0: a: unexpected delay?"; cat out; fail=1; }
+
+  kill $pid
+
+  wait $pid
+done
 
 Exit $fail
